Project0/manifest/Project0c/force-app/main/default/objects/Package__c/Package__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <displayFormat>Package-{0000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>