Project0/manifest/Project0c/force-app/main/default/objects/Package__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>