Project0/manifest/Project0c/force-app/main/default/objects/Package__c/recordTypes/Driver_Record.recordType-meta.xml
<RecordType>
    <fullName>Driver_Record</fullName>
    <active>true</active>
    <label>Driver Record</label>
</RecordType>