Project0/manifest/Project0c/force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>FedEX_CEO</role>
        <role>Mail_Handler</role>
        <role>Manager</role>
    </sharedTo>
</ListView>