Project0/manifest/Project0c/force-app/main/default/objects/Package__c/listViews/Route_1.listView-meta.xml
<ListView>
    <fullName>Route_1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Route__c</field>
        <operation>equals</operation>
        <value>ROUTE-0001</value>
    </filters>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Un-Delivered</value>
    </filters>
    <label>Route 1</label>
    <sharedTo>
        <role>Mail_Handler</role>
        <role>Route_1</role>
    </sharedTo>
</ListView>